kubernetes/apps/networking/traefik/add-ons/ingressroute.yaml
---
# disable & use kube-proxy
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.${SECRET_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      middlewares:
        - name: default
        # - name: basicauth
      services:
        - name: api@internal
          kind: TraefikService
        # - name: traefik
        #   namespace: networking
        #   port: 9000
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
